--- a/style.css
+++ b/style.css
@@ -14,10 +14,19 @@
     width: 540px;
 }
 
+.col-md-4 {
+    background-color: rgb(39, 53, 92);
+}
+
 .question-footer {
     border-top: 1px solid rgb(0, 0, 0, 0.4);
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-top: 12px;
+}
+
+.answerField:hover {
+    cursor: pointer;
+    background-color: rgb(0, 0, 0, 0.07);
 }
