--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     background-color: royalblue;
 }
 
+.card {
+    border: none !important;
+}
+
 .container {
     min-height: 100vh;
     display: flex;
@@ -34,4 +38,26 @@
 .bg-success,
 .bg-danger {
     color: white;
+}
+
+.brainPic {
+    max-width: 30%;
+}
+
+.btn {
+    display: block !important;
+}
+
+.endScreen {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.trophy {
+    position: absolute;
+    bottom: 30px;
+    right: 0;
+    max-width: 13%;
 }
