--- a/style.css
+++ b/style.css
@@ -55,9 +55,17 @@
     align-items: center;
 }
 
+.btn-link {
+    text-decoration: none !important;
+}
+
 .trophy {
     position: absolute;
     bottom: 30px;
     right: 0;
     max-width: 13%;
+}
+
+.progress {
+    border-radius: 0 !important;
 }
