--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 .card {
     border: none !important;
+    background-color: rgb(247, 247, 247);
 }
 
 .container {
@@ -14,12 +15,55 @@
     background-color: royalblue;
 }
 
+.success {
+    background-color: rgb(183, 247, 153)!important;
+}
+
+.success1 {
+    background-color: rgb(77, 190, 22)!important;
+    color: white;
+}
+
+.danger {
+    background-color: rgb(255, 163, 164)!important;
+}
+
+.danger1 {
+    background-color: rgb(247, 24, 24)!important;
+    color: white;
+}
+
 .quizcard {
     width: 540px;
 }
 
 .col-md-4 {
     background-color: rgb(39, 53, 92);
+}
+
+.containerQuizChoice {
+    margin: 40px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 60%;
+}
+
+.col-md-4 img {
+    object-fit: contain;
+    width: 60%;
+    margin: 0px auto;
+    margin-bottom: 25px;
+}
+
+.col-md-4 button {
+    border: none;
+    background-color: rgb(39, 53, 92);
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    font-family: 'Rubik', sans-serif;
+    padding-bottom: 15px;
 }
 
 .question-footer {
@@ -32,7 +76,14 @@
 
 .answerField:hover {
     cursor: pointer;
-    background-color: rgb(0, 0, 0, 0.07);
+    background-color: rgb(0, 0, 0, 0.05);
+}
+
+.answerField span {
+    background-color: rgb(214, 214, 214);
+    padding: 5px 12px 7px 13px;
+    margin-right: 10px;
+    border-radius: 3px;
 }
 
 .bg-success,
@@ -55,6 +106,32 @@
     align-items: center;
 }
 
+.endScreen p {
+    font-family: 'Rubik', sans-serif;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+.endScreen img {
+    margin: 20px 0px;
+}
+
+.endScreen .btn-link {
+    color: rgb(24, 60, 234);
+}
+
+.endScreen .btn-primary {
+    width: 120px;
+    border-radius: 8px;
+    margin-top: 20px;
+    background-color: rgb(24, 60, 234);
+}
+
+.orange {
+    color: rgb(243, 139, 59);
+    margin-right: 20px;
+}
+
 .btn-link {
     text-decoration: none !important;
 }
@@ -63,9 +140,62 @@
     position: absolute;
     bottom: 30px;
     right: 0;
-    max-width: 13%;
+    max-width: 20%;
 }
 
 .progress {
     border-radius: 0 !important;
+}
+
+.startScreen {
+    min-height: 373px;
+    font-family: 'PT Sans', sans-serif;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background-image: url("img/brainbg.jpg");
+    background-size: cover;
+    background-position-x: center;
+    filter: brightness(100%);
+}
+
+.startScreen p {
+    font-size: 22px;
+    margin: 0;
+}
+
+.startScreen>span {
+    font-size: 17px;
+}
+
+.startScreen button {
+    background-color: rgb(255, 78, 16);
+    border: none;
+    width: 120px;
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
+}
+
+.startScreen button:hover {
+    background-color: rgb(255, 78, 16);
+}
+
+@media (max-width: 425px) {
+    .container {
+        min-width: 100%;
+        min-height: 100%;
+        padding: 0!important;
+    }
+    .navbar {
+        display: none!important;
+    }
+    .mb-3 {
+        margin-bottom: 0rem!important;
+    }
+    .col-md-4 img {
+        width: auto;
+    }
 }
